--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-<link rel="icon" type="image/x-icon" href="/favicon.ico" />    <title>mi-proyecto-psicologia</title>
-  </head>
+<link rel="icon" type="image/png" href="/corazon.png" />  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
