--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
